test/jzas/symboltable/invalid/fail01.asm
var1:	equ 2
var1:	equ 3
